--- a/김민서_60211644_과제3/과제css.css
+++ b/김민서_60211644_과제3/과제css.css
@@ -97,7 +97,9 @@
     background-color: #fff8f0;
     text-align: center;
   }
-  
+  main h3{
+    color: #d2691e;
+  }
   section {
     margin-bottom: 40px;  
   }
@@ -309,44 +311,4 @@
       "footer footer footer";
     }
   }
-  body.dark-mode {
-  background-color: #1e1e1e;
-  color: #f0f0f0;
-}
-
-body.dark-mode a {
-  color: #9ad4ff;
-}
-
-body.dark-mode header,
-body.dark-mode main,
-body.dark-mode aside {
-  background-color: #2c2c2c;
-  border-color: #444;
-}
-
-body.dark-mode nav {
-  background-color: #3b3b3b;
-}
-
-body.dark-mode footer {
-  background-color: #111;
-  color: #ccc;
-}
-
-body.dark-mode table {
-  background-color: #333;
-  color: #fff;
-}
-
-body.dark-mode th {
-  background-color: #555;
-}
-
-body.dark-mode p{
-  color: #ffffff;
-}
-
-body.dark-mode h1, h2, h3, h4{
-  color: #ffffff;
-}
+  
